# zurich-opendata-mcp

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.de.md  CONTRIBUTING.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json
audits/: bakom-mcp-audit.md  zurich-opendata-mcp-audit-rerun.md  zurich-opendata-mcp-audit.md
src/zurich_opendata_mcp/: app.py  formatters.py  http_client.py  server.py
src/zurich_opendata_mcp/clients/: paris.py  wfs.py
src/zurich_opendata_mcp/tools/: geo.py  parliament.py  realtime.py  sparql.py  strb.py  tourism.py
tests/: conftest.py  test_geo.py  test_http_client.py  test_parliament.py  test_realtime.py  test_server.py  test_sparql_flag.py  test_strb.py  test_tourism.py
